--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,9 @@
         "lv_examples.h": "c",
         "lv_refr.h": "c",
         "i2c_wii.h": "c",
-        "stm32f4xx.h": "c"
+        "stm32f4xx.h": "c",
+        "usbd_api.h": "c",
+        "usb_otg_regs.h": "c"
     },
     "cortex-debug.variableUseNaturalFormat": true
 }
